--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-router": "^7.4.1",
+    "react-router-dom": "^7.9.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
